fix(@media): media querry for tablet version starting from 650px now to avoid majority of overflows

--- a/style.css
+++ b/style.css
@@ -420,7 +420,7 @@ footer a {
 
 
 /* TABLET VERSION */
-@media screen and (min-width:426px) {
+@media screen and (min-width:650px) {
     /* GENERAL */
     /* Container to horizontal align content */
     .align-box {
